commit: create header

--- a/html/dalkomm.html
+++ b/html/dalkomm.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500&display=swap" rel="stylesheet"> -->
-  <!-- <link href=”https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css”> -->
+  <!-- <link href="https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SpoqaHanSansNeo-Bold.woff"> -->
 
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
@@ -28,7 +28,21 @@
   
 <body>
   <div id="wrap">
-    <header id="headBox"></header>
+    <header id="headBox">
+      <div class="navBox">
+        <h1><a href="/"><img src="../img/dalkomm.svg" alt="로고"></a></h1>
+        <nav class="nav_area">
+          <ul class="nav_inner">
+            <li>Dal.Komm</li>
+            <li>메뉴,매장</li>
+            <li>창업안내</li>
+            <li>새로운 소식</li>
+            <li>SHOP</li>
+          </ul>
+        </nav>
+      </div>
+      
+    </header>
     <section id="mainBox"></section>
     <section id="viewBox"></section>
     <article id="contentBox"></article>
