commit: add mainpage

--- a/html/dalkomm.html
+++ b/html/dalkomm.html
@@ -41,9 +41,21 @@
           </ul>
         </nav>
       </div>
-      
     </header>
-    <section id="mainBox"></section>
+    <!-- header -->
+
+    <section id="mainBox">
+      <h2>
+        <span>Dal.Komm</span>
+        <span>Life Happens</span>
+        <span>Coffee Helps</span>
+      </h2>
+      <div class="main_img"> 
+        <img src="../img/img_pc.jpg" alt="dal.komm 이미지">
+      </div>
+    </section>
+    <!-- mainBox -->
+    
     <section id="viewBox"></section>
     <article id="contentBox"></article>
     <article id="artBox"></article>
