commit: add mainBox

--- a/html/dalkomm.html
+++ b/html/dalkomm.html
@@ -53,6 +53,9 @@
       <div class="main_img"> 
         <img src="../img/img_pc.jpg" alt="dal.komm 이미지">
       </div>
+      <div class="circle_text">
+        <span>Dal.Komm CAFE Dal.Komm</span>
+      </div>
     </section>
     <!-- mainBox -->
     
