commit: created mainBox

--- a/html/dalkomm.html
+++ b/html/dalkomm.html
@@ -51,11 +51,12 @@
         <span>Coffee Helps</span>
       </h2>
       <div class="main_img"> 
-        <img src="../img/img_pc.jpg" alt="dal.komm 이미지">
+        <img src="../img/img_mo.jpg" alt="dal.komm 이미지" class="img_mo">
+        <img src="../img/img_pc.jpg" alt="dal.komm 이미지" class="img_pc">
       </div>
-      <div class="circle_text">
+      <!-- <div class="circle_text">
         <span>Dal.Komm CAFE Dal.Komm</span>
-      </div>
+      </div> -->
     </section>
     <!-- mainBox -->
     
